--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 5%;
+  padding: 0 7%;
   background-color: var(--bg);
   margin-bottom: 5%;
 }
@@ -116,7 +116,7 @@ body {
   transition: opacity 1s ease-in-out;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .slider img.active {
   opacity: 1;
@@ -158,6 +158,7 @@ body {
   color: #fff;
   font-size: 20px;
   padding: 10px;
+  text-align: center;
 }
 
 /* Hadis 1 */
