--- a/css/mobile.css
+++ b/css/mobile.css
@@ -85,8 +85,15 @@ body {
   }
 
   .caption {
-    padding: 2.2rem 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     background-color: #32cd32;
+    color: #fff;
+    font-size: 20px;
+    padding: 20px;
+    text-align: center;
   }
 
   .hadis {
